# clicky

./: .gitignore  AGENTS.md  OPENROUTER_INTEGRATION.md  PRACTICE_MODE_PLAN.md  README.md  flake.nix  install-clicky.sh  package.json  prd.json  progress.txt  shell.nix
.githooks/: pre-commit
DebilMac/: Package.swift  run.sh
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: auth.py  auth_router.py  config.py  database.py  main.py  models.py  routes.py  security.py  webui_router.py  workspace_ingestion_service.py  workspaces_router.py  workspaces_service.py
backend/app/agent/: bash_tool.py  contracts.py  defaults.py  just_bash_runner.mjs  package-lock.json  package.json  postgres_readonly_shell.py  postgres_workspace_filesystem.mjs  router.py
backend/app/agent/loop/: abort_registry.py  service.py  tool_handler.py
backend/app/agent/provider/: __init__.py  base.py  openai_responses.py  openrouter_chat_completions.py
backend/app/parsing/: contracts.py  router.py  service.py
backend/app/parsing/course_pdf_ingest/: __init__.py  cli.py  config.py  docling_backend.py  logging_utils.py  models.py  normalize.py  ocr_fallback.py  pipeline.py  topic_locator.py  utils.py  writer.py
backend/app/templates/: webui_dashboard.html  webui_login.html
backend/clicky_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 973820dae025_initial_schema.py
docs/: experiment-tft-helper-manual-snapshot.md
landing/: index.html
leanring-buddy/: AIServiceSettings.swift  AppBundleConfiguration.swift  AppleSpeechTranscriptionProvider.swift  AppleTTSClient.swift  AssemblyAIStreamingTranscriptionProvider.swift  BuddyDictationManager.swift  BuddyTranscriptionProvider.swift  ChatInputBubbleManager.swift  ChatInputBubbleView.swift  ClaudeAPI.swift  ClickyAnalytics.swift  CodexExecLauncher.swift  CompanionManager.swift  CompanionPanelView.swift  CompanionResponseOverlay.swift  CompanionScreenCaptureUtility.swift  ComputerUseActionExecutor.swift  ConversationEntry.swift  CourseDetailView.swift  CursorMarkView.swift  DashboardView.swift  DebAnalytics.swift  DebilBackendClient.swift  DebilBrandButton.swift  DebilDesignTokenAliases.swift  DebilFrontendStore.swift  DebilHeaderBar.swift  DebilRootView.swift  DelegationLogSidebar.swift  DesignSystem.swift  ElementLocationDetector.swift  ElevenLabsTTSClient.swift  GeminiAPI.swift  GlobalPushToTalkShortcutMonitor.swift  (+26 more)
leanring-buddy.xcodeproj/: project.pbxproj
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  autostart.rs  main.rs  overlay.rs  screenshot.rs
(+147 files in other folders)
