[project]
name = "clicky-backend"
version = "0.1.0"
description = "FastAPI backend for Clicky"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<0.29.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
