[project]
name = "clicky-backend"
version = "0.1.0"
description = "FastAPI backend for Clicky"
requires-python = ">=3.11"
dependencies = [
    "docling[rapidocr]>=2.58.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<0.29.0",
    "pypdfium2>=4.30.0",
    "pypdf>=5.4.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
