[package]
name = "sewa-companion"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"
keyring = "3"
ashpd = { version = "0.10", features = ["tokio"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tiny_http = "0.12"
base64 = "0.22"
urlencoding = "2.1"
open = "5"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
